# Fornex

./: .env.local.example  .gitignore  Anchor.toml  Cargo.toml  DEMO_EXPLAINER_SCRIPT.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEMO_VOICE_PROMPT.md  README.md  SUBMISSION.md  TELEPROMPTER.md  TESTING.md  drift-deployed-idl.json  next.config.js  package-lock.json  package.json  tsconfig.json
agent/: .dockerignore  .env.example  DEPLOY_FLY.md  Dockerfile  fly.toml  pm2-runner.js  test-brain.ts  test-logger.ts
components/: AgentCards.tsx  AgentEarnings.tsx  AgentPerformanceChart.tsx  AgentReputationCard.tsx  DebateFeed.tsx  DecisionCard.tsx  DepositPanel.tsx  EquityCurve.tsx  HeroCard.tsx  HeroLiveTicker.tsx  HowItWorks.tsx  LiveDecisionPreview.tsx  Nav.tsx  OnChainProof.tsx  PositionPanel.tsx  RiskDashboard.tsx  RiskStatusCard.tsx  StatsBar.tsx  StatusBar.tsx  StrategyModeBadge.tsx  StrategyOrdersPanel.tsx  Toast.tsx  TrustStrip.tsx  VaultStats.tsx  WalletDisconnected.tsx
frontend/: .env.local.example
hooks/: useAgentCycle.ts  useDecisionStream.ts  useDecisions.ts  usePosition.ts  usePriorityFee.ts  (+1 more)
programs/fornex/: Cargo.toml
programs/fornex/src/: errors.rs  lib.rs  state.rs
programs/fornex/src/instructions/: close_synthetic_position.rs  deposit.rs  emergency_pause.rs  init_agent_reputation.rs  init_vault_strategy.rs  initialize_vault.rs  log_multi_agent_decision.rs  log_trade.rs  migrate_vault_v2.rs  mod.rs  open_synthetic_position.rs  record_nav_snapshot.rs  record_trade_outcome.rs  set_strategy_mode.rs  update_agent_reputation.rs  update_nav.rs  withdraw.rs
(+52 files in other folders)
