[package]
name = "fornex"
version = "0.1.0"
description = "Fornex Protocol — Autonomous AI Perp Trading Vault on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fornex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cgo = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
pyth-solana-receiver-sdk = "0.3.2"
spl-token = "4.0.0"
